--- a/Template 2/index.html
+++ b/Template 2/index.html
@@ -7,6 +7,7 @@
         <meta name="author" content="">
         <meta name="keywords" content="">
         <link rel='stylesheet' type='text/css' href='css/style2.css' media='screen'>
+        <link rel="stylesheet" type='text/css' href="css/box.css"/>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/df8c842f2d.js" crossorigin="anonymous"></script>
     </head>
@@ -14,84 +15,24 @@
     <!------------------------------------------------------------------------------------------------
     |                                           Menu                                               |
     ------------------------------------------------------------------------------------------------>
-        <header>
-            <nav>
-            <div id='icon'>LOGO </div>
-                <label for='drop' class='drop'>Menu</label>
-                <input type='sub' id='subm'/>
-                    <ul class='menu'>
-                        <li><a href='#'>Home</a></li>
-                        <li>
-                            <label for='drop-1' class='hide'>Mulher+</label>
-                            <a href='#'>Mulher</a>
-                            <input type='dropcerto' id='drop-1'/>
-                            <ul>
-                                <li><a href='#'>Camisolas</a></li>
-                                <li><a href='#'>Camisas<a></li> 
-                                <li><a href='#'>Tops<a></li> 
-                                <li><a href='#'>Casacos<a></li> 
-                                <li><a href='#'>Calças & Calções<a></li> 
-                                <li><a href='#'>Roupa Íntima<a></li> 
-                                <li><a href='#'>Saias & Vestidos<a></li> 
-                                <li><a href='#'>Calçado<a></li> 
-                                <li><a href='#'>Coleções<a></li> 
-                                <li><a href='#'>Promoções<a></li> 
-                            </ul>        
-                        </li>
-                        <li>
-                            <label for='drop-2' class='hide'>Homem+</label>
-                            <a href='#'>Homem</a>
-                            <input type='dropcerto' id='drop-2'/>
-                            <ul>
-                                <li><a href='#'>Camisas</a></li>
-                                <li><a href='#'>T-Shirts<a></li> 
-                                <li><a href='#'>Calções<a></li> 
-                                <li><a href='#'>Calças<a></li> 
-                                <li><a href='#'>Polos<a></li> 
-                                <li><a href='#'>Sweatshirts<a></li>  
-                                <li><a href='#'>Roupa interior<a></li>
-                                <li><a href='#'>Coleções<a></li> 
-                                <li><a href='#'>Promoções<a></li> 
-                            </ul>
-                        </li>
-                        <li>
-                            <label for='drop-3' class='hide'>Menino+</label>
-                            <a href='#'>Menino</a>
-                            <input type='dropcerto' id='drop-3'/>
-                            <ul>
-                                <li><a href='#'>Camisas, T-Shirts & Polos</a></li>
-                                <li><a href='#'>Camisolas, Pullovers & Sweatshirts<a></li> 
-                                <li><a href='#'>Casacos<a></li> 
-                                <li><a href='#'>Calças & Calções<a></li> 
-                                <li><a href='#'>Roupa Interior<a></li> 
-                                <li><a href='#'>Calçado & Acessórios<a></li> 
-                                <li><a href='#'>Coleções<a></li> 
-                                <li><a href='#'>Promoções<a></li> 
-                            </ul>
-                        </li>
-                        <li>
-                            <label for='drop-4' class='hide'>Menina+</label>
-                            <a href='#'>Menina</a>
-                            <input type='dropcerto' id='drop-4'/>
-                            <ul>
-                                <li><a href='#'>Camisas & Polos</a></li>
-                                <li><a href='#'>Camisolas, Pullovers & Sweatshirts<a></li> 
-                                <li><a href='#'>Tops & T-Shirts<a></li> 
-                                <li><a href='#'>Casacos<a></li> 
-                                <li><a href='#'>Saias & Vestidos<a></li>
-                                <li><a href='#'>Calças & Calções<a></li> 
-                                <li><a href='#'>Roupa Interior<a></li> 
-                                <li><a href='#'>Calçado & Acessórios<a></li> 
-                                <li><a href='#'>Coleções<a></li> 
-                                <li><a href='#'>Promoções<a></li> 
-                            </ul>
-                        </li>
-                        <li><a href='#'>Sobre Nós</a></li>
-                    </ul> 
-            </nav>         
-        </div>
-
-        </header>
+    <body class="homepage">
+		<div id="header">
+			<div class="container">
+					<div id="logo">
+						<h1><a href="#">CRweb</a></h1>
+						<span>Sub</span>
+					</div>
+					<nav id="nav">
+						<ul>
+							<li class="active"><a href="index.html">Homepage</a></li>
+							<li><a href="produtos.html">Produtos</a></li>
+							<li><a href="sobrenos.html">Sobre Nós</a></li>
+							<li><a href="equipa.html">Nossa equipa </a></li>
+							<li><a href="contactos.html">contactos</a></li>
+						</ul>
+					</nav>
+			</div>
+		</div>
            <!------------------------------------------------------------------------------------------------
             |                                            Footer                                             |
             ------------------------------------------------------------------------------------------------>
